test/resources/parser/failing/testStructure6.scala
object MissingCase {
  x match {
    1 => "one"
    _ => "other"
  }
}